PlutoLayout ordering and scanning

--- a/PlutoWallet/Components/CustomLayouts/CustomLayoutItemDragger.xaml
+++ b/PlutoWallet/Components/CustomLayouts/CustomLayoutItemDragger.xaml
@@ -2,10 +2,9 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:card="clr-namespace:PlutoWallet.Components.Card"
-             x:Class="PlutoWallet.Components.Extrinsic.ExtrinsicStatusView"
-             IsVisible="{Binding IsVisible}"
+             x:Class="PlutoWallet.Components.CustomLayouts.CustomLayoutItemDragger"
              HeightRequest="60">
-   <card:Card>
+    <card:Card>
         <card:Card.View>
             <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
                             AbsoluteLayout.LayoutFlags="All"
@@ -31,13 +30,8 @@
 
                 <Image Source="{AppThemeBinding Light=closeblack.png, Dark=closewhite.png}"
                        Aspect="AspectFit"
-                       AbsoluteLayout.LayoutBounds="1, 0.5, 50, 30" AbsoluteLayout.LayoutFlags="PositionProportional">
-                    <Image.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="OnRemoveClicked" />
+                       AbsoluteLayout.LayoutBounds="1, 0.5, 50, 30" AbsoluteLayout.LayoutFlags="PositionProportional"/>
 
-                    </Image.GestureRecognizers>
-
-                </Image>
             </AbsoluteLayout>
         </card:Card.View>
     </card:Card>
