--- a/PlutoWallet/Components/CustomLayouts/CustomLayoutItemDragger.xaml
+++ b/PlutoWallet/Components/CustomLayouts/CustomLayoutItemDragger.xaml
@@ -13,10 +13,18 @@
                                      AbsoluteLayout.LayoutFlags="SizeProportional">
                     <HorizontalStackLayout>
                         <Label 
-                            x:Name="nameLabel"
                             FontAttributes="Bold"
-                            HorizontalOptions="Start"
-                            VerticalTextAlignment="End"/>
+                            HorizontalOptions="Center"
+                            VerticalTextAlignment="End">
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span FontAttributes="Bold" x:Name="nameLabelText" />
+
+                                </FormattedString>
+
+                            </Label.FormattedText>
+
+                        </Label>
                         <Image Source="{AppThemeBinding Light=infoblack.png, Dark=infowhite.png}" 
                                    VerticalOptions="Center"
                                    Margin="5, 0, 0, 0"
@@ -28,10 +36,19 @@
                         HorizontalOptions="Start" />
                 </VerticalStackLayout>
 
-                <Image Source="{AppThemeBinding Light=closeblack.png, Dark=closewhite.png}"
+                <Image Source="{AppThemeBinding Light=menublack.png, Dark=menuwhite.png}"
                        Aspect="AspectFit"
                        AbsoluteLayout.LayoutBounds="1, 0.5, 50, 30" AbsoluteLayout.LayoutFlags="PositionProportional"/>
+                <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
+                                 AbsoluteLayout.LayoutFlags="SizeProportional">
+                    <AbsoluteLayout.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnClicked" />
 
+                    </AbsoluteLayout.GestureRecognizers>
+
+                </AbsoluteLayout>
+
+                
             </AbsoluteLayout>
         </card:Card.View>
     </card:Card>
