--- a/PlutoWallet/View/CustomLayoutsPage.xaml
+++ b/PlutoWallet/View/CustomLayoutsPage.xaml
@@ -23,22 +23,35 @@
                     AbsoluteLayout.LayoutFlags="All"
                     Scrolled="OnScrolled"
                     Padding="0, 55, 0, 0">
-            <VerticalStackLayout x:Name="verticalStackLayout"
-                                 HorizontalOptions="Center"
+            <VerticalStackLayout HorizontalOptions="Center"
                                  Padding="20, 10, 20, 100"
+                                 Spacing="5">
+
+                <VerticalStackLayout x:Name="verticalStackLayout"
+                                 HorizontalOptions="Center"
                                  Spacing="5"
+                                 ZIndex="10"
                                  BindableLayout.ItemsSource="{Binding LayoutItemInfos}">
-                <BindableLayout.ItemTemplate>
-                    <DataTemplate>
-                        <customlayouts:CustomLayoutItemDragger ItemName="{Binding Name}"
-                                                               PlutoLayoutId="{Binding PlutoLayoutId}"/>
+                    <BindableLayout.ItemTemplate>
+                        <DataTemplate>
+                            <customlayouts:CustomLayoutItemDragger ItemName="{Binding Name}"
+                                                                   PlutoLayoutId="{Binding PlutoLayoutId}"/>
 
-                    </DataTemplate>
+                        </DataTemplate>
 
-                </BindableLayout.ItemTemplate>
+                    </BindableLayout.ItemTemplate>
+                </VerticalStackLayout>
 
-            
+                <customlayouts:PlusItemView x:Name="plusView">
+                    <customlayouts:PlusItemView.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="OnPlusClicked" />
+
+                    </customlayouts:PlusItemView.GestureRecognizers>
+
+                </customlayouts:PlusItemView>
+
             </VerticalStackLayout>
+            
         </ScrollView>
 
         <AbsoluteLayout AbsoluteLayout.LayoutBounds="1, 0, 80, 1"
@@ -79,6 +92,12 @@
         <navigationbar:TopNavigationBar Title="Custom layout"
                                         ExtraTitle="Export"
                                         x:Name="topNavigationBar" />
+
+        <customlayouts:DeleteItemView AbsoluteLayout.LayoutBounds="0.5, 1, 1, 100"
+                                      AbsoluteLayout.LayoutFlags="PositionProportional, WidthProportional"
+                                      Margin="20"
+                                      x:Name="deleteView"
+                                      IsVisible="False" Opacity="0" />
 
         <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
                         x:Name="protectiveLayout" IsVisible="False"/>
