--- a/PlutoWallet/Components/NetworkSelect/MultiNetworkSelectOptionView.xaml
+++ b/PlutoWallet/Components/NetworkSelect/MultiNetworkSelectOptionView.xaml
@@ -3,14 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:networkselect="clr-namespace:PlutoWallet.Components.NetworkSelect"
              x:Class="PlutoWallet.Components.NetworkSelect.MultiNetworkSelectOptionView">
-    <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 0, AutoSize, 46" >
-        <Frame CornerRadius="23"
-               AbsoluteLayout.LayoutBounds="0, 0, AutoSize, 46"
-               Padding="3"
+    <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 46"
+                    AbsoluteLayout.LayoutFlags="WidthProportional">
+        <Border 
+               AbsoluteLayout.LayoutBounds="0, 0, 1, 46"
+               AbsoluteLayout.LayoutFlags="WidthProportional"
                BackgroundColor="#88888888"
-               BorderColor="#88888888">
-            <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
-                    AbsoluteLayout.LayoutFlags="All">
+               StrokeThickness="0">
+            <Border.StrokeShape>
+                <RoundRectangle CornerRadius="23" />
+
+            </Border.StrokeShape>
+
+        </Border>
+
+       <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                    AbsoluteLayout.LayoutFlags="All"
+                    Margin="3">
 
                 <HorizontalStackLayout Spacing="2">
                     <networkselect:NetworkBubbleView x:Name="bubble1" IsVisible="false" ShowName="True"
@@ -25,20 +34,19 @@
                     <networkselect:NetworkBubbleView x:Name="bubble4" IsVisible="false"
                                                      HorizontalOptions="End"/>
                 </HorizontalStackLayout>
-                <BoxView BackgroundColor="#00000000"
-                        AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
-                         AbsoluteLayout.LayoutFlags="All"
-                        Opacity="{OnPlatform Android=0, Default=1}">
-                    <BoxView.GestureRecognizers>
-                        <TapGestureRecognizer Tapped="OnClicked" />
+                
+            <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                            AbsoluteLayout.LayoutFlags="All">
+                <AbsoluteLayout.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="OnClicked" />
 
-                    </BoxView.GestureRecognizers>
+                </AbsoluteLayout.GestureRecognizers>
 
-                </BoxView>
 
             </AbsoluteLayout>
+        </AbsoluteLayout>
          
-        </Frame>
+        
     </AbsoluteLayout>
 </ContentView>
 
