--- a/PlutoWallet/View/NetworkSelectionPage.xaml
+++ b/PlutoWallet/View/NetworkSelectionPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:network="clr-namespace:PlutoWallet.Components.NetworkSelect"
-             xmlns:viewmodel="clr-namespace:PlutoWallet.ViewModel"
+             xmlns:viewmodel="clr-namespace:PlutoWallet.ViewModel" xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar"
              x:Class="PlutoWallet.View.NetworkSelectionPage"
              Title="Network selection">
     <ContentPage.BindingContext>
@@ -10,12 +10,16 @@
 
     </ContentPage.BindingContext>
     <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
+
+        <Image AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
+               Source="space.png" Aspect="AspectFill"/>
+
         <ScrollView Orientation="Vertical"
                     AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
             <VerticalStackLayout x:Name="verticalStackLayout"
                                  HorizontalOptions="Center"
-                                 MinimumWidthRequest="300"
-                                 Margin="20, 0, 0, 100"
+                                 MaximumWidthRequest="320"
+                                 Margin="20, 55, 20, 100"
                                  Spacing="5"
                                  BindableLayout.ItemsSource="{Binding Options}">
                 <BindableLayout.ItemTemplate>
@@ -30,7 +34,10 @@
             </VerticalStackLayout>
         </ScrollView>
 
+        <navigationbar:TopNavigationBar Title="Network selection" />
+
     </AbsoluteLayout>
-    
+
+
     
 </ContentPage>
