--- a/PlutoWallet/View/CustomLayoutsPage.xaml
+++ b/PlutoWallet/View/CustomLayoutsPage.xaml
@@ -4,6 +4,7 @@
              xmlns:viewmodel="clr-namespace:PlutoWallet.ViewModel"
              xmlns:customlayouts="clr-namespace:PlutoWallet.Components.CustomLayouts"
              xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar"
+             xmlns:networkselect="clr-namespace:PlutoWallet.Components.NetworkSelect"
              x:Class="PlutoWallet.View.CustomLayoutsPage"
              Title="CustomLayoutsPage"
              >
@@ -26,6 +27,8 @@
             <VerticalStackLayout HorizontalOptions="Center"
                                  Padding="20, 10, 20, 100"
                                  Spacing="5">
+
+                <networkselect:MultiNetworkSelectView HorizontalOptions="Center" Margin="0, -5, 0, 10" />
 
                 <VerticalStackLayout x:Name="verticalStackLayout"
                                  HorizontalOptions="Center"
@@ -60,7 +63,7 @@
                         Padding="0, 55, 0, 0"
                         >
             <VerticalStackLayout HorizontalOptions="Center"
-                                 Margin="0, 10, 0, 100"
+                                 Margin="0, 61, 0, 100"
                                  Spacing="5"
                                  BindableLayout.ItemsSource="{Binding LayoutItemInfos}"
                                  x:Name="draggerStackLayout">
