--- a/PlutoWallet/View/NftView.xaml
+++ b/PlutoWallet/View/NftView.xaml
@@ -1,12 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodel="clr-namespace:PlutoWallet.ViewModel" xmlns:nft="clr-namespace:PlutoWallet.Components.Nft"
              x:Class="PlutoWallet.View.NftView"
              AbsoluteLayout.LayoutBounds="0.5, .5, 1, 1" AbsoluteLayout.LayoutFlags="All">
-    <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, .5, 1, 1" AbsoluteLayout.LayoutFlags="All">
-        <Label 
-            Text="Welcome to NFT page" FontAttributes="Bold" TextColor="White" FontSize="40"
-            AbsoluteLayout.LayoutBounds="0.5, .5, AutoSize, AutoSize" AbsoluteLayout.LayoutFlags="PositionProportional"/>
-    </AbsoluteLayout>
+    <ContentView.BindingContext>
+        <viewmodel:NftViewModel />
+
+    </ContentView.BindingContext>
+    <ScrollView
+            AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
+
+        <VerticalStackLayout
+            x:Name="stackLayout"
+            Spacing="15"
+            Padding="20, 65, 20, 200"
+            BindableLayout.ItemsSource="{Binding NftMetadata}">
+            <BindableLayout.ItemTemplate>
+                <DataTemplate>
+                    <nft:NftThumbnailView Image="{Binding Image}"
+                                          Name="{Binding Name}"
+                                          Description="{Binding Description}" />
+
+                </DataTemplate>
+
+            </BindableLayout.ItemTemplate>
+
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentView>
 
