NFT thumbnail - Show chain, favourite, more button

--- a/PlutoWallet/View/NftView.xaml
+++ b/PlutoWallet/View/NftView.xaml
@@ -20,7 +20,8 @@
                 <DataTemplate>
                     <nft:NftThumbnailView Image="{Binding Image}"
                                           Name="{Binding Name}"
-                                          Description="{Binding Description}" />
+                                          Description="{Binding Description}"
+                                          Endpoint="{Binding Endpoint}"/>
 
                 </DataTemplate>
 
