--- a/PlutoWallet/Components/Nft/NftThumbnailView.xaml
+++ b/PlutoWallet/Components/Nft/NftThumbnailView.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:card="clr-namespace:PlutoWallet.Components.Card" xmlns:networkselect="clr-namespace:PlutoWallet.Components.NetworkSelect"
+             xmlns:card="clr-namespace:PlutoWallet.Components.Card"
+             xmlns:networkselect="clr-namespace:PlutoWallet.Components.NetworkSelect"
              x:Class="PlutoWallet.Components.Nft.NftThumbnailView"
              >
     <card:Card CardPadding="0, 0, 10, 0">
@@ -114,6 +115,10 @@
 
                             </Label.FormattedText>
 
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Tapped="OnMoreClicked" />
+
+                            </Label.GestureRecognizers>
 
                         </Label>
                     </Grid>
