--- a/PlutoWallet/Components/Nft/NftDescriptionView.xaml
+++ b/PlutoWallet/Components/Nft/NftDescriptionView.xaml
@@ -7,17 +7,34 @@
    <card:Card>
         <card:Card.View>
             
-            <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
-                            AbsoluteLayout.LayoutFlags="All"
-                            Padding="0, 10, 0, 30"
-                            HeightRequest="{Binding Source={x:Reference descriptionLabel}, Path=Height}">
-                <VerticalStackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
-                                     AbsoluteLayout.LayoutFlags="SizeProportional"
-                                     >
-                    <Label TextType="Html" x:Name="descriptionLabel" TextColor="{AppThemeBinding Light=Black, Dark=White}" />
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="*" />
 
-                </VerticalStackLayout>
-            </AbsoluteLayout>
+                </Grid.RowDefinitions>
+
+                <Label x:Name="descriptionTitleLabel"
+                       VerticalTextAlignment="Center"
+                       HorizontalTextAlignment="Start"
+                       Grid.Row="0">
+                    <Label.FormattedText>
+                        <FormattedString>
+                            <Span FontAttributes="Bold"
+                                    Text="Description"
+                                    TextColor="{AppThemeBinding Light=Black, Dark=White}"/>
+
+                        </FormattedString>
+
+                    </Label.FormattedText>
+                </Label>
+
+                <Label TextType="Html" x:Name="descriptionLabel" TextColor="{AppThemeBinding Light=Black, Dark=White}"
+                       Grid.Row="1"/>
+                
+
+            </Grid>
+                    
         </card:Card.View>
     </card:Card>
 </ContentView>
