--- a/PlutoWallet/Components/Balance/UsdBalanceView.xaml
+++ b/PlutoWallet/Components/Balance/UsdBalanceView.xaml
@@ -4,9 +4,13 @@
              xmlns:balance="clr-namespace:PlutoWallet.Components.Balance"
              x:Class="PlutoWallet.Components.Balance.UsdBalanceView"
              HeightRequest="{Binding HeightRequest}">
-    <StackLayout x:Name="stackLayout" MinimumHeightRequest="60"
-                 Spacing="10">
-        <AbsoluteLayout HeightRequest="60">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="60" />
+            <RowDefinition Height="*" />
+
+        </Grid.RowDefinitions>
+        <AbsoluteLayout Grid.Row="0">
             <Label 
                 HorizontalTextAlignment="Center" VerticalTextAlignment="Center"
                 AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
@@ -40,23 +44,26 @@
             </Image>
 
         </AbsoluteLayout>
+       
+        <StackLayout Orientation="Vertical"
+                     Grid.Row="1"
+                     Margin="0, 10, 0, 0"
+                     Spacing="5"
+                     x:Name="balanceViewStackLayout">
+             <balance:AssetAmountView />
+             <balance:AssetAmountView />
+             <balance:AssetAmountView />
+             <balance:AssetAmountView />
+             <balance:AssetAmountView />
+             <balance:AssetAmountView />
+             <balance:AssetAmountView />
+             <balance:AssetAmountView />
+             <balance:AssetAmountView />
+             <balance:AssetAmountView />
 
-        <CollectionView 
-                        ItemsSource="{Binding Assets}"
-                        >
-            <CollectionView.ItemsLayout>
-                <LinearItemsLayout Orientation="Vertical"
-                                   ItemSpacing="5"/>
-            </CollectionView.ItemsLayout>
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <balance:AssetAmountView Amount="{Binding Amount}"
-                                             Symbol="{Binding Symbol}"
-                                             ChainIcon="{Binding ChainIcon}"
-                                             UsdValue="{Binding UsdValue}"/>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-    </StackLayout>
+
+        </StackLayout>
+        
+    </Grid>
 </ContentView>
 
