Transaction request fee calculation

--- a/PlutoWallet/Components/TransactionRequest/TransactionRequestView.xaml
+++ b/PlutoWallet/Components/TransactionRequest/TransactionRequestView.xaml
@@ -59,6 +59,9 @@
 
                 <Label Text="" x:Name="errorLabel" TextColor="Red" IsVisible="false" />
 
+                <Label TextColor="Orange"
+                       Text="{Binding Fee}" />
+
                 <Button Text="Sing and submit"
                         Clicked="OnSubmitClicked" />
 
