--- a/PlutoWallet/View/MnemonicsPage.xaml
+++ b/PlutoWallet/View/MnemonicsPage.xaml
@@ -1,189 +1,100 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:viewmodel="clr-namespace:PlutoWallet.ViewModel"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodel="clr-namespace:PlutoWallet.ViewModel"
+             xmlns:card="clr-namespace:PlutoWallet.Components.Card" xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar"
              x:Class="PlutoWallet.View.MnemonicsPage"
              Title="Mnemonics">
     <ContentPage.BindingContext>
         <viewmodel:MnemonicsViewModel x:Name="viewModel" />
     </ContentPage.BindingContext>
-    <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
+   <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
+        
+        <Image AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
+               Source="space.png" Aspect="AspectFill"/>
 
-        <ScrollView AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
-          <VerticalStackLayout>
-            <Grid Margin="20,35,20,20">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Label Grid.Column="0"
-                       Grid.Row="0"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[0]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start" />
-                <Label Grid.Column="1"
-                       Grid.Row="0"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[1]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                <Label Grid.Column="0"
-                       Grid.Row="1"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[2]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                <Label Grid.Column="1"
-                       Grid.Row="1"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[3]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                <Label Grid.Column="0"
-                       Grid.Row="2"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[4]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                <Label Grid.Column="1"
-                       Grid.Row="2"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[5]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                <Label Grid.Column="0"
-                       Grid.Row="3"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[6]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                <Label Grid.Column="1"
-                       Grid.Row="3"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[7]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                <Label Grid.Column="0"
-                       Grid.Row="4"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[8]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                <Label Grid.Column="1"
-                       Grid.Row="4"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[9]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                <Label Grid.Column="0"
-                       Grid.Row="5"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[10]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"
-                       />
-                <Label Grid.Column="1"
-                       Grid.Row="5"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[11]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                <Label Grid.Column="0"
-                       Grid.Row="6"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[12]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                <Label Grid.Column="1"
-                       Grid.Row="6"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[13]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                <Label Grid.Column="0"
-                       Grid.Row="7"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[14]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                <Label Grid.Column="1"
-                       Grid.Row="7"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[15]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                 <Label Grid.Column="0"
-                       Grid.Row="8"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[16]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start"/>
-                 <Label Grid.Column="1"
-                       Grid.Row="8"
-                       Style="{StaticResource mnemonicLabel}"
-                       Text="{Binding OrderedMnemonicsArray[17]}"
-                       HorizontalOptions="Center"
-                       VerticalOptions="Center"
-                       HorizontalTextAlignment="Start" />
-            </Grid>
+        <ScrollView Orientation="Vertical"
+                    x:Name="scrollView"
+                    AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                    AbsoluteLayout.LayoutFlags="All"
+                    Padding="0, 55, 0, 0">
+            <VerticalStackLayout HorizontalOptions="Center"
+                                 Padding="20, 10, 20, 100"
+                                 Spacing="15">
+                <ContentView HeightRequest="120">
+                    <card:Card>
+                        <card:Card.View>
+                            <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                                            AbsoluteLayout.LayoutFlags="All"
+                                            Margin="0, 10, 0, 10">
+                                <VerticalStackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
+                                                     AbsoluteLayout.LayoutFlags="SizeProportional">
+                                    <VerticalStackLayout>
+                                        <Label 
+                                            FontAttributes="Bold"
+                                            HorizontalOptions="Center"
+                                            VerticalTextAlignment="End">
+                                            <Label.FormattedText>
+                                                <FormattedString>
+                                                    <Span FontAttributes="Bold" Text="Mnemonics: "/>
 
+                                                </FormattedString>
 
+                                            </Label.FormattedText>
 
-     
-        <Entry Placeholder="Enter your password here" Text="{Binding Password}" Margin="20" />
-        <StackLayout Orientation="Horizontal" FlowDirection="LeftToRight" Spacing="10" Margin="20, 0, 20, 0" >
-            <Image 
-                   HeightRequest="20"
-                   VerticalOptions="Center" 
-                   HorizontalOptions="Start"
-                >
-                <Image.Source>
-                    <FontImageSource Color="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource DarkThemeWhite}}"
-                                        Glyph="&#xf06a;"
-                                         FontFamily="FontAwesome"
-                                         Size="20" />
-                </Image.Source>
-            </Image>
-            <Label HorizontalOptions="StartAndExpand" Text="Enter a strong password and remember it along with these 18 words"/>
-        </StackLayout>
+                                        </Label>
+                                         <Label Text="{Binding Mnemonics}" HorizontalTextAlignment="Center" />
+                                    </VerticalStackLayout>
+                
+                                </VerticalStackLayout>
+                            </AbsoluteLayout>
+                        </card:Card.View>
+                    </card:Card>
+                </ContentView>
 
-        <Label Text="" Margin="20, 0, 20, 0" />
+                 <ContentView HeightRequest="90">
+                    <card:Card>
+                        <card:Card.View>
+                            <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1"
+                                            AbsoluteLayout.LayoutFlags="All"
+                                            Margin="0, 10, 0, 10">
+                                <VerticalStackLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
+                                                     AbsoluteLayout.LayoutFlags="SizeProportional">
+                                    <VerticalStackLayout>
+                                        <Label 
+                                            FontAttributes="Bold"
+                                            HorizontalOptions="Center"
+                                            VerticalTextAlignment="End">
+                                            <Label.FormattedText>
+                                                <FormattedString>
+                                                    <Span FontAttributes="Bold" Text="Password: "/>
 
+                                                </FormattedString>
 
-             <Button Text="Continue" IsEnabled="{Binding IsStrongPassword}" Margin="20, 10, 20, 0"
-                     Clicked="ContinueToMainPageClicked" />
-             <Button Text="Use existing mnemonics" Margin="20, 10" Clicked="GoToEnterMnemonics" />
-        </VerticalStackLayout>
+                                            </Label.FormattedText>
 
+                                        </Label>
+                                        <Entry HeightRequest="40" Placeholder="Password"
+                                               Text="{Binding Password}" Margin="0, 10, 0, 10"
+                                               Keyboard="Plain" IsPassword="True" />
+
+                                    </VerticalStackLayout>
+                
+                                </VerticalStackLayout>
+                            </AbsoluteLayout>
+                        </card:Card.View>
+                    </card:Card>
+                </ContentView>
+
+                <Button Text="Continue" Clicked="ContinueToMainPageClicked" />
+                <Button Text="Use existing mnemonics" Clicked="GoToEnterMnemonics" />
+
+            </VerticalStackLayout>
+            
         </ScrollView>
-       
+
+        <navigationbar:TopNavigationBar Title="New mnemonics"
+                                        x:Name="topNavigationBar" />
+
     </AbsoluteLayout>
 </ContentPage>
