--- a/PlutoWallet/View/SettingsPage.xaml
+++ b/PlutoWallet/View/SettingsPage.xaml
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:predefinedlayouts="clr-namespace:PlutoWallet.Components.PredefinedLayouts"
-             xmlns:customlayouts="clr-namespace:PlutoWallet.Components.CustomLayouts"
-             xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar" xmlns:settings="clr-namespace:PlutoWallet.Components.Settings"
+             xmlns:navigationbar="clr-namespace:PlutoWallet.Components.NavigationBar"
+             xmlns:settings="clr-namespace:PlutoWallet.Components.Settings"
              x:Class="PlutoWallet.View.SettingsPage"
              Title="Settings">
     <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
