Raw message signing

--- a/PlutoWallet/View/BasePage.xaml
+++ b/PlutoWallet/View/BasePage.xaml
@@ -66,6 +66,8 @@
         
         <transactionrequest:TransactionRequestView />
 
+        <transactionrequest:MessageSignRequestView />
+
         <staking:StakingRegistrationRequestView />
 
         <confirmtransaction:ConfirmTransactionView />
